ACLOCAL_AMFLAGS = -I m4

noinst_HEADERS = \
		Ch1/BulletOpenGLApplication.h \
		Ch2/BulletOpenGLApplication.h

bin_PROGRAMS = \
		ch1 ch2

ch1_CPPFLAGS=
ch1_SOURCES = \
		Ch1/BulletOpenGLApplication.cpp \
		Ch1/FreeGLUTCallbacks.h	\
		Ch1/main.cpp

ch2_CPPFLAGS=
ch2_SOURCES = \
		Ch2/BulletOpenGLApplication.cpp \
		Ch2/FreeGLUTCallbacks.h	\
		Ch2/main.cpp

		